// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dev-engines > bun 1`] = `
{
  "agent": "bun",
  "name": "bun",
  "version": "0",
}
`;

exports[`dev-engines > deno 1`] = `
{
  "agent": "deno",
  "name": "deno",
  "version": "2",
}
`;

exports[`dev-engines > npm 1`] = `
{
  "agent": "npm",
  "name": "npm",
  "version": "7",
}
`;

exports[`dev-engines > pnpm 1`] = `
{
  "agent": "pnpm",
  "name": "pnpm",
  "version": "8",
}
`;

exports[`dev-engines > pnpm@6 1`] = `
{
  "agent": "pnpm@6",
  "name": "pnpm",
  "version": "6",
}
`;

exports[`dev-engines > pnpm-version-range 1`] = `
{
  "agent": "pnpm",
  "name": "pnpm",
  "version": "8.0.0",
}
`;

exports[`dev-engines > unknown 1`] = `null`;

exports[`dev-engines > yarn 1`] = `
{
  "agent": "yarn",
  "name": "yarn",
  "version": "1",
}
`;

exports[`dev-engines > yarn@berry 1`] = `
{
  "agent": "yarn@berry",
  "name": "yarn",
  "version": "berry",
}
`;

exports[`install-metadata > bun 1`] = `
{
  "agent": "bun",
  "name": "bun",
}
`;

exports[`install-metadata > deno 1`] = `
{
  "agent": "deno",
  "name": "deno",
}
`;

exports[`install-metadata > npm 1`] = `
{
  "agent": "npm",
  "name": "npm",
}
`;

exports[`install-metadata > pnpm 1`] = `
{
  "agent": "pnpm",
  "name": "pnpm",
}
`;

exports[`install-metadata > unknown 1`] = `null`;

exports[`install-metadata > yarn 1`] = `
{
  "agent": "yarn",
  "name": "yarn",
}
`;

exports[`install-metadata > yarn@berry 1`] = `
{
  "agent": "yarn@berry",
  "name": "yarn",
}
`;

exports[`install-metadata > yarn@berry_pnp-v2 1`] = `
{
  "agent": "yarn@berry",
  "name": "yarn",
}
`;

exports[`install-metadata > yarn@berry_pnp-v3 1`] = `
{
  "agent": "yarn@berry",
  "name": "yarn",
}
`;

exports[`lockfile > bun 1`] = `
{
  "agent": "bun",
  "name": "bun",
}
`;

exports[`lockfile > deno 1`] = `
{
  "agent": "deno",
  "name": "deno",
}
`;

exports[`lockfile > npm 1`] = `
{
  "agent": "npm",
  "name": "npm",
}
`;

exports[`lockfile > pnpm 1`] = `
{
  "agent": "pnpm",
  "name": "pnpm",
}
`;

exports[`lockfile > pnpm@6 1`] = `
{
  "agent": "pnpm",
  "name": "pnpm",
}
`;

exports[`lockfile > unknown 1`] = `null`;

exports[`lockfile > yarn 1`] = `
{
  "agent": "yarn",
  "name": "yarn",
}
`;

exports[`lockfile > yarn@berry 1`] = `
{
  "agent": "yarn",
  "name": "yarn",
}
`;

exports[`packager > bun 1`] = `
{
  "agent": "bun",
  "name": "bun",
  "version": "0",
}
`;

exports[`packager > deno 1`] = `
{
  "agent": "deno",
  "name": "deno",
  "version": "2",
}
`;

exports[`packager > npm 1`] = `
{
  "agent": "npm",
  "name": "npm",
  "version": "7",
}
`;

exports[`packager > pnpm 1`] = `
{
  "agent": "pnpm",
  "name": "pnpm",
  "version": "8",
}
`;

exports[`packager > pnpm@6 1`] = `
{
  "agent": "pnpm@6",
  "name": "pnpm",
  "version": "6",
}
`;

exports[`packager > pnpm-version-range 1`] = `
{
  "agent": "pnpm",
  "name": "pnpm",
  "version": "8.0.0",
}
`;

exports[`packager > unknown 1`] = `null`;

exports[`packager > yarn 1`] = `
{
  "agent": "yarn",
  "name": "yarn",
  "version": "1",
}
`;

exports[`packager > yarn@berry 1`] = `
{
  "agent": "yarn@berry",
  "name": "yarn",
  "version": "berry",
}
`;
